# 1D_FEM_Solver_Parallel

./: CMakeLists.txt  README.md
Extras/: cell.h  deal2.cpp  mat.txt  matrix_65025rhs  prob1  run.sh  sparse.txt
Input/: file.txt
MainPrograms/: Prob_1.cpp  Prob_2.cpp
include/: FE_1D.h  InputData.h  Sparse_Matrix.h  solvers.h
src/: .gitignore  CMakeLists.txt  FE_1D.cpp  InputData.cpp  Sparse_Matrix.cpp
